# libipc-

./: .gitignore  .project  CMakeLists.txt  LICENSE  README.md  libipc-.kdev4  main.cpp
Doc/Doxygen/: Doxyfile
Doc/SRS/: srs.tex
Source/: Process.cpp  Utility.cpp
Source/platform/linux/: Process.cpp
Source/platform/win32/: Definitions.cpp  Process.cpp
benchmark/: Header.h  Main.cpp  Source.cpp
benchmark/win32/: FileLock.cpp  MemoryMap.cpp  Pipe.cpp  SharedMemory.cpp
cmake/: OptionalSource.cmake  ParseArguments.cmake
ext/gtest/: CMakeLists.txt
ext/gtest/src/googletest-stamp/: googletest-svninfo.txt
ext/gtest/tmp/: googletest-cfgcmd.txt
ext/win32/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h
ext/win32/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
gtest/msvc/: gtest.sln
include/libipcpp/: Definitions.h  FileLock.h  IOBase.h  LockGuard.h  MemoryMap.h  MessageQueue.h  NamedPipe.h  Pipe.h  Pipe.inl  Process.h  Semaphore.h  SharedMemory.h  Utility.h  libipcpp.h
include/libipcpp/Exception/: IpcException.h  MessageQueueException.h  NamedPipeException.h  PipeException.h  ProcessException.h  SemaphoreException.h  SharedMemoryException.h
include/libipcpp/Platform/Win32/: Process.inl
include/libipcpp/exception/: FileLockException.h  IpcException.h  MemoryMapException.h  MessageQueueException.h  NamedPipeException.h  PipeException.h  ProcessException.h  SemaphoreException.h  SharedMemoryException.h
include/libipcpp/platform/linux/: MemoryMap.inl  NamedPipe.inl  Pipe.inl  SharedMemory.inl
include/libipcpp/platform/win32/: MemoryMap.inl  NamedPipe.inl  Pipe.inl  Process.inl  SharedMemory.inl
msvc/: libipc++.sln
msvc/ProcessTest/: Main.cpp  ProcessTest.vcxproj  ProcessTest.vcxproj.filters  ReadMe.txt  stdafx.cpp
msvc/TestReader/: Main.cpp  TestReader.vcxproj
msvc/TestWriter/: Main.cpp  TestWriter.vcxproj
msvc/benchmark/: Benchmark.txt  benchmark.vcxproj  benchmark.vcxproj.filters
msvc/libipc++/: libipc++.vcxproj  libipc++.vcxproj.filters
msvc/libipc++.test/: Log.txt  libipc++.test.vcxproj  libipc++.test.vcxproj.filters
msvc/libipc++_test/: libipc++_test.vcxproj
source/: CMakeLists.txt  MemoryMap.cpp  Process.cpp  SharedMemory.cpp  Utility.cpp
source/exception/: FileLockException.cpp  IpcException.cpp  MemoryMapException.cpp  MessageQueueException.cpp  NamedPipeException.cpp  PipeException.cpp  ProcessException.cpp  SemaphoreException.cpp  SharedMemoryException.cpp
source/platform/linux/: FileLock.cpp  MemoryMap.cpp  NamedPipe.cpp  Pipe.cpp  Process.cpp  Semaphore.cpp  SharedMemory.cpp
source/platform/win32/: DefinitionsWin32.cpp  FileLockWin32.cpp  MemoryMapWin32.cpp  MessageQueueWin32.cpp  NamedPipeWin32.cpp  Pipe.cpp  PipeWin32.cpp  Process.cpp  ProcessWin32.cpp  SemaphoreWin32.cpp  SharedMemoryWin32.cpp  Utility.cpp  UtilityWin32.cpp
test/: Main.cpp  ProcessTest.cpp  ThisIsATest.cpp
test/linux/: CMakeLists.txt  FileLockTest.cpp  Globals.h  MemoryMapTest.cpp  NamedPipeTest.cpp  PipeTest.cpp  ProcessTest.cpp  SemaphoreTest.cpp  SharedMemoryTest.cpp
test/linux/data/: testprocess.c  testprocess1  testprocess_returns_2  testprocess_returns_2.c
test/win32/: FileLockTest.cpp  Globals.h  Main.cpp  MemoryMapTest.cpp  NamedPipeTest.cpp  PipeTest.cpp  ProcessTest.cpp  SemaphoreTest.cpp  SharedMemoryTest.cpp
